--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,4 @@ include_directories(.)
 add_library(libdeflate_static STATIC ${SOURCES} ${HEADERS} ${PUBLIC_HEADERS})
 target_include_directories(libdeflate_static PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-set_target_properties(libdeflate_static PROPERTIES
-  OUTPUT_NAME deflate
-  PUBLIC_HEADER libdeflate.h GDeflate.h)
+set_target_properties(libdeflate_static PROPERTIES OUTPUT_NAME deflate)
